--- a/templates/signup.html.tmpl
+++ b/templates/signup.html.tmpl
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Sign Up</title>
 </head>
 <body>
-    <h1>Login</h1>
-    <form method="POST" action="/login">
+    <h1>Sign Up</h1>
+    <form method="POST" action="/signup">
         <label>Email: <input type="email" name="email"></label><br>
         <label>Password: <input type="password" name="password"></label><br>
-        <button type="submit">Login</button>
+        <button type="submit">Create Account</button>
     </form>
-    <a href="/signup">Sign up</a>
+    <a href="/login">Login</a>
 </body>
 </html>
