--- a/views/index.html.tmpl
+++ b/views/index.html.tmpl
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-    <link rel="stylesheet" href="/static/style.css">
-</head>
-<body>
-    <h1>Welcome to the Home Page</h1>
-    <a href="/login">Login</a>
-</body>
-</html>
+{{template "base.html.tmpl" .}}
+
+{{define "title"}}Home Page{{end}}
+
+{{define "body"}}
+<p>Welcome to the Home Page</p>
+{{end}}
+
+{{define "footer"}}
+<footer>
+    <p>Index Footer</p>
+</footer>
+{{end}}
