change index page to be simple image with versions

--- a/views/base.html.tmpl
+++ b/views/base.html.tmpl
@@ -3,10 +3,11 @@
 <html>
 <head>
 {{block "head" .}}
-    <title>{{block "title" .}} My Website {{end}}</title>
-    <meta charset="UTF-8">
+    {{block "title" .}}<title> My Website </title>{{end}}
+    
     {{block "meta" .}}
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {{end}}
 
     {{block "favicon" .}}
