make version a variable

--- a/views/index.html.tmpl
+++ b/views/index.html.tmpl
@@ -46,7 +46,7 @@
 
   <!-- framework & runtime info -->
   <ul>
-    <li><strong>Monolith version:</strong> 0.1.0</li>
+    <li><strong>Monolith version:</strong> {{.monolith_version}}</li>
     <li><strong>Go version:</strong> go1.22+</li>
   </ul>
 
