--- a/views/base.html.tmpl
+++ b/views/base.html.tmpl
@@ -10,7 +10,7 @@
     {{block "meta" .}}
     {{end}}
 
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon">
 
     {{block "header" .}}
     {{end}}
